# Music-Connect

./: .env.sample  .gitignore  .prettierrc  Dockerfile.txt  README.md  app.js  constants.js  entrypoint.sh  package-lock.json  package.json  server.js  tsconfig.json
controllers/: album.controller.js  message.controller.js  playlist.controller.js  song.controller.js  user.controller.js
db/: connection.js
frontend/: package-lock.json  package.json
frontend/src/: index.css
middlewares/: ai.middleware.js  album.middleware.js  auth.middleware.js  message.middleware.js  multer.middleware.js  playlist.middleware.js  search.middleware.js  song.middleware.js
models/: album.model.js  listeningHistory.model.js  message.model.js  playlist.model.js  response.model.js  song.model.js  user.model.js
public/: index.html
routes/: album.route.js  message.route.js  message.routes.js  playlist.route.js  song.route.js  user.route.js  user.routes.js
src/: App.css  App.js
src/components/: Chat.js  Icons.js  Player.js  ProfileDropdown.js  Sidebar.js  TopNav.js
src/context/: AuthContext.js  UserContext.js
src/pages/: AccountSettings.js  Library.js  Profile.js
utils/: ApiError.js  AsyncHandler.js  cloudinary.js
utils/ai/: PromptTemplate.js  generateEmbeddings.js
utils/fluvio/: fluvio-config  fluvio_config.txt  produceAndConsumeEvents.js  produceAndConsumeEvents.ts  test.txt  transforms.yaml
utils/fluvio/listening-history-module/: Cargo.toml  README.md  SmartModule.toml
utils/fluvio/listening-history-module/src/: lib.rs
utils/socket/: index.js
(+12 files in other folders)
