[package]
name = "listening-history-module"
version = "0.1.0"
authors = ["braudalf"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
